--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -30,7 +30,7 @@
     .hero__parametrs {
         position: absolute;
         right: 140px;
-        top: 2400px;
+        top: 240px;
         background: $PrimaryBlue100;
         width: 252px;
         display: flex;
@@ -82,11 +82,12 @@
             flex-direction: row;
             justify-content: space-evenly;
             &:not(.hero__parametrs__large) {
-                position: absolute;
+                position: absolute;               
                 top: auto;
+                flex-direction: row;
                 right: 0;
                 height: 160px;
-                width: 240px;
+                width: 100%;
             }
             &__item {
                 padding: 30px 0;
@@ -123,10 +124,11 @@
             padding-top: 15px;
             &:not(.hero__parametrs__large) {
                 position: absolute;
-                top: auto;
+                top: auto; 
+                flex-direction: row;              
                 right: 0;
                 height: 90px;
-                width: 150px;
+                width: 100%;
             }
             &__item {
                 padding: 20px 0;
@@ -134,8 +136,8 @@
                     font-size: 10px;
                     padding-bottom: 5px;    
                 }
-                strong {
-                    font-size: 20px;
+                strong {                    
+                    font-size-adjust: 0.3;
                 }
             }
         }
