настроен шрифт в контейнере инфо и пдф

--- a/scss/blocks/inf.scss
+++ b/scss/blocks/inf.scss
@@ -2,33 +2,22 @@
 
 .inf {
     
-    position: relative;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
     &__title {
-        
+        display: block;
         margin-top: 700px;
-        width: 720px;
+        /*width: 720px;*/
         font-size: 16px;
         padding: 20px 0;
         font-weight: 500;
         &::after {
             position: absolute;
             content: '';
-           
             margin: 9px 0 0 13px;
             width: 530px;
             height: 1px;
             background: #000;
-        }
-        &__title1 {
-            line-height: 140%;
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 26px;
-        }
-    }  
-
+        }  
+    }   
 }
 
 .inf__galery {
