--- a/scss/blocks/pdf.scss
+++ b/scss/blocks/pdf.scss
@@ -5,6 +5,7 @@
     position: relative;
     font-family: Montserrat, sans-serif;
     font-weight: normal;
+    margin-bottom: 136px;
     &__title {
         margin-top: 100px;
         width: 720px;
@@ -20,8 +21,41 @@
             background: #000;
         }
     }
-    &__text1 {
-        display: block;    
-        width: 788px;
+    &__text {
+        display: grid;
+        grid-template-columns: 500px 200px;
+        align-items: center;
+        column-gap: 160px;
+        padding: 40px 0;
+        line-height: 240%;
+        span {
+            color: #fff;
+            font-weight: 400;
+            padding-bottom: 10px;
+            padding-right: 100px;
+            line-height: 240%;
+            &__image {
+                width: 138px;
+            }
+        }   
     }
+    &__button {
+        align-content: center;
+        top: auto; 
+        flex-direction: row;              
+        right: 900px;
+        height: 50px;
+        width: 230px;
+        color: #fff;
+        padding: 10px 20px;
+        background: $PrimaryBlue100;
+    }   
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px){
+
+}
+
+@media screen and (max-width: 767px){
+    
 }
