--- a/scss/blocks/inf.scss
+++ b/scss/blocks/inf.scss
@@ -51,6 +51,38 @@
 }
 
 @media screen and (max-width: 1279px) and (min-width: 768px){
+    .inf__galery {
+        height: 1280px;
+        width: 610px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        &__image4 {
+            
+            grid-column: 1;
+            grid-row: 2;
+            
+            
+        }
+        &__image2 {
+            
+            grid-row: 3;
+            grid-column: 1;
+
+        }
+        &__image5 {
+            grid-column: 2;
+            grid-row: 2;
+        }
+        &__image3 {
+            grid-column: 2;
+            grid-row: 3;
+        }
+       &__image6 {
+            padding-top: 320px;
+            grid-column: 2;
+            grid-row: 3;
+        }
+    }
 
 }
 
