--- a/scss/blocks/pdf.scss
+++ b/scss/blocks/pdf.scss
@@ -22,23 +22,28 @@
         }
     }
     &__text {
-        display: grid;
+        /*display: grid;
         grid-template-columns: 500px 200px;
+        grid-template-rows: 140px;
         align-items: center;
-        column-gap: 160px;
+        column-gap: 160px;*/
+        display: block;
         padding: 40px 0;
         line-height: 240%;
-        span {
+        /*span {
             color: #fff;
             font-weight: 400;
             padding-bottom: 10px;
             padding-right: 100px;
-            line-height: 240%;
-            &__image {
-                width: 138px;
-            }
-        }   
-    }
+            line-height: 240%;*/
+        &__image {
+            position: absolute;
+            top: 220px;
+            left: 660px;
+            width: 138px;
+        }
+    }   
+    
     &__button {
         align-content: center;
         top: auto; 
@@ -53,6 +58,14 @@
 }
 
 @media screen and (max-width: 1279px) and (min-width: 768px){
+    .pdf {
+        &__title {
+            margin-top: 14px;
+        }
+        &__text {
+            
+        }
+    }
 
 }
 
