--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -90,7 +90,7 @@
         margin: 150px 0;
         object-fit: cover;
         width: 100%;
-        height: 436px;
+        height: auto;
         left: 0;
         right: 0;
     }
@@ -127,11 +127,67 @@
         }
         &__text2{
             margin: 0 0 20px 0;
+            
         }
     
     }
 }
 
 @media screen and (max-width: 767px){
-
+    .about {
+        
+        &__advantage {
+            height: 740px;
+            width: 90vw;
+            margin: 50px 0;
+            grid-template-columns: 200px 30vw;
+            grid-template-rows: repeat(5, 1fr);
+ 
+        }
+        &__text2{
+            margin: 0 0 20px 0;
+            width: 90vw;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 160%;
+        }
+        &__text1{
+            margin: 0 0 20px 0;
+            width: 90vw;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 160%;
+        }
+        &__item {
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 120%;
+        }
+        &__title {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 140%;
+        }
+     
+    }
+    .count {
+        &__title {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 150%;
+            
+            &::after {
+                width: 260px;
+                top: 513px;
+            }
+        }
+        &__button {
+            right: auto;
+            
+        }
+        &__image {
+            margin: 80px 0;
+        }
+    }
+   
 }
