--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -1,37 +1,50 @@
 @import './variables';
+
 .footer {
+    background-color: $PrimaryBlue100;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     column-gap: 130px;
+    row-gap: 50px;
     justify-content: space-between;
     align-items: center;
     align-content: center;
     height: 470px;
     width: 100%;
-    background: $PrimaryBlue100; 
+     
     color: #fff;
     margin: 0;
     padding: 0 50px;
+    &__text {
+
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 150%;
+    }
+    &__text1 {
+
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 150%;
+    }
     &__left {
         font-weight: 600;
         font-size: 32px;
         padding-top: 77px;
-        line-height: 120%;    
+        line-height: 120%; 
+       
     }
     &__right {
-        width: 500px;
+        
         font-weight: 400;
         font-size: 16px;
         line-height: 160%;
         padding-top: 77px;
         &__name {
-            background-color: $PrimaryBlue100;
-            border-color: #f80606;
-            border: 1px; 
-            
+            background-color: $PrimaryBlue100;            
         }
-        &__button {
-            
+        &__button {            
             align-content: center;
             top: auto; 
             flex-direction: row;              
@@ -42,20 +55,66 @@
             padding: 10px 25px;
             background: #fff;
         }
-        &__tel {
-            font-weight: 500;
-            font-size: 32px;
-            line-height: 150%;
-        }
+       
 
     }
 }
 
 
 @media screen and (max-width: 1279px) and (min-width: 768px){
-
+    .footer {
+        grid-template-rows: repeat(3, 1fr);
+       
+        height: auto;
+        padding: 70px;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 120%
+    }  
+    .footer__left   {
+        grid-column: span 2;
+        padding-right: 190px;
+        &__text {
+            
+        }
+    } 
+    .footer__right {
+        grid-column: span 2;
+    }      
+   
+    
+   
 }
 
 @media screen and (max-width: 767px){
+   .footer {
+        display: block;
+        width: 80%;
+        height: 700px;
+        padding-right: 160px;
+        align-content: start;
+        &__text {
+            display: block;
+            position: relative;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 120%;
+            top: 50px;
+        }
+        &__text1 {
+            display: block;
+            position: relative;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 120%;
+            top: 150px;
+        }
+        &__left__text {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 50%;
+            
+        }
+    } 
     
 }
