--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -24,7 +24,7 @@
     }
     .hero__image {
         width: 100%;
-        height: 600px;
+        height: auto;
         object-fit: cover;
     }
     .hero__parametrs {
