--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@ h2 {
 
 
 
+
 @media screen and (max-width: 1279px) and (min-width: 768px) {
     .conteiner {
         width: 90vw;
@@ -37,4 +38,8 @@ h2 {
         width: auto;
         margin: 0 15px;
     }
+    h2 {
+        width: 90vw;
+    }
+   
 }
