--- a/scss/blocks/inf.scss
+++ b/scss/blocks/inf.scss
@@ -21,7 +21,7 @@
 }
 
 .inf__galery {
-    width: 100%;
+    width: 1200px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -98,38 +98,41 @@
 }
 
 @media screen and (max-width: 1279px) and (min-width: 768px){
-    .inf__galery   {
-        height: 1280px;
-        width: 610px;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        &__image4 {
-            
-            grid-column: 1;
-            grid-row: 2;
-            
-            
-        }
-        &__image2 {
-            
-            grid-row: 3;
-            grid-column: 1;
+    .inf {
+        display: block;
+        width: 700px;
+        &__galery   {
+            height: 1280px;
+            width: 610px;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            &__image4 {
+                
+                grid-column: 1;
+                grid-row: 2;
+                
+                
+            }
+            &__image2 {
+                
+                grid-row: 3;
+                grid-column: 1;
 
-        }
-        &__image5 {
-            grid-column: 2;
-            grid-row: 2;
-        }
-        &__image3 {
-            grid-column: 2;
-            grid-row: 3;
-        }
-       &__image6 {
-            padding-top: 320px;
-            grid-column: 2;
-            grid-row: 3;
-        }
-        
+            }
+            &__image5 {
+                grid-column: 2;
+                grid-row: 2;
+            }
+            &__image3 {
+                grid-column: 2;
+                grid-row: 3;
+            }
+            &__image6 {
+                padding-top: 320px;
+                grid-column: 2;
+                grid-row: 3;
+            }
+        }   
     }
     .inf__text {
         height: 1280px;
